# fastapi-template

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deployment.md  docker-compose.yml  pyproject.toml
.devcontainer/: .devcontainer.json  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
app/: main.py
app/core/: authentication.py  config.py  emails.py  security.py
app/models/: base.py  user.py  users.py
app/routes/: app_router.py  auth_router.py  user_router.py
app/schemas/: auth_schema.py  base_schema.py  user_schema.py
app/utils/: gravatar.py
data/: create_superuser.sql
migrations/app/: 1_20250213135356_None.py
scripts/: prestart.sh  tests-start.sh
tests/: conftest.py
tests/api/routers/: test_auths.py  test_users.py  test_users_current.py  test_utils.py
tests/utils/: utils.py
